--- a/2. Data_Preparation_IEEE33/Load Variation IEEE 33 step by step.ipynb
+++ b/2. Data_Preparation_IEEE33/Load Variation IEEE 33 step by step.ipynb
@@ -31,10 +31,10 @@
     "# Lese die Excel-Datei mit dem Profil, welches varriert werden soll ein\n",
     "\n",
     "\n",
-    "df_profil = pd.read_excel(\"profil_spring.xlsx\")\n",
+    "#df_profil = pd.read_excel(\"profil_spring.xlsx\")\n",
     "#df_profil = pd.read_excel(\"profil_winter.xlsx\")\n",
     "#df_profil = pd.read_excel(\"profil_summer.xlsx\")\n",
-    "#df_profil = pd.read_excel(\"profil_fall.xlsx\")\n",
+    "df_profil = pd.read_excel(\"profil_fall.xlsx\")\n",
     "\n",
     "# Erstelle ein leeres Pandas-DataFrame für die Ergebnisse\n",
     "results = pd.DataFrame()\n",
@@ -42,7 +42,7 @@
     "# Für jedes Szenario:   \n",
     "for i in range(1000):\n",
     "    # Erstelle ein Array mit normalverteilten Zufallsvariablen für jeden Bus und Jahreszeit\n",
-    "    random_variables = np.random.normal(0, 0.003, (len(df_profil), 1))\n",
+    "    random_variables = np.random.normal(0, 0.002, (len(df_profil), 1))\n",
     "    \n",
     "    # Berechne die Summe der Zufallsvariablen\n",
     "    sum_random_variables = sum(random_variables)\n",
@@ -359,7 +359,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.5"
+   "version": "3.9.15"
   }
  },
  "nbformat": 4,
