Update Averse costs winter

--- a/2. Data_Preparation_IEEE33/Load Variation one run.ipynb
+++ b/2. Data_Preparation_IEEE33/Load Variation one run.ipynb
@@ -17,8 +17,8 @@
     "# Lese die Excel-Datei mit dem Profil, welches varriert werden soll ein\n",
     "#df_profil = pd.read_excel(\"profil_spring.xlsx\")\n",
     "#df_profil = pd.read_excel(\"profil_summer.xlsx\")\n",
-    "df_profil = pd.read_excel(\"profil_fall.xlsx\")\n",
-    "#df_profil = pd.read_excel(\"profil_winter.xlsx\")\n",
+    "#df_profil = pd.read_excel(\"profil_fall.xlsx\")\n",
+    "df_profil = pd.read_excel(\"profil_winter.xlsx\")\n",
     "\n",
     "# Erstelle ein leeres Pandas-DataFrame für die Ergebnisse\n",
     "results = pd.DataFrame()\n",
@@ -26,7 +26,7 @@
     "# Für jedes Szenario:   \n",
     "for i in range(1000):\n",
     "    # Erstelle ein Array mit normalverteilten Zufallsvariablen für jeden Bus und Jahreszeit\n",
-    "    random_variables = np.random.normal(0, 0.002, (len(df_profil), 1))\n",
+    "    random_variables = np.random.normal(0, 0.005, (len(df_profil), 1))\n",
     "    \n",
     "    # Berechne die Summe der Zufallsvariablen\n",
     "    sum_random_variables = sum(random_variables)\n",
@@ -61,8 +61,8 @@
     "########################################part 2#####################################\n",
     "#load_bus = pd.read_excel('load_bus_spring.xlsx')\n",
     "#load_bus = pd.read_excel('load_bus_summer.xlsx')\n",
-    "load_bus = pd.read_excel('load_bus_fall.xlsx')\n",
-    "#load_bus = pd.read_excel('load_bus_winter.xlsx')\n",
+    "#load_bus = pd.read_excel('load_bus_fall.xlsx')\n",
+    "load_bus = pd.read_excel('load_bus_winter.xlsx')\n",
     "\n",
     "load_profil = pd.DataFrame(columns=['b'] + ['t'+str(i) for i in range(1,97)])\n",
     "load_profil['b'] = load_bus['b']\n",
