--- a/2. Data_Preparation_IEEE33/New_hope.ipynb
+++ b/2. Data_Preparation_IEEE33/New_hope.ipynb
@@ -2,123 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 114,
    "id": "940004ea",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "     b        t1      t2        t3        t4        t5        t6        t7  \\\n",
-      "0    1  0.000000  0.0000  0.000000  0.000000  0.000000  0.000000  0.000000   \n",
-      "1    2  0.070463  0.0700  0.068942  0.068633  0.068266  0.068180  0.068280   \n",
-      "2    3  0.063417  0.0630  0.062048  0.061769  0.061440  0.061362  0.061452   \n",
-      "3    4  0.084556  0.0840  0.082731  0.082359  0.081920  0.081816  0.081936   \n",
-      "4    5  0.042278  0.0420  0.041365  0.041180  0.040960  0.040908  0.040968   \n",
-      "5    6  0.042278  0.0420  0.041365  0.041180  0.040960  0.040908  0.040968   \n",
-      "6    7  0.140926  0.1400  0.137884  0.137265  0.136533  0.136361  0.136560   \n",
-      "7    8  0.140926  0.1400  0.137884  0.137265  0.136533  0.136361  0.136560   \n",
-      "8    9  0.042278  0.0420  0.041365  0.041180  0.040960  0.040908  0.040968   \n",
-      "9   10  0.042278  0.0420  0.041365  0.041180  0.040960  0.040908  0.040968   \n",
-      "10  11  0.031708  0.0315  0.031024  0.030885  0.030720  0.030681  0.030726   \n",
-      "11  12  0.042278  0.0420  0.041365  0.041180  0.040960  0.040908  0.040968   \n",
-      "12  13  0.042278  0.0420  0.041365  0.041180  0.040960  0.040908  0.040968   \n",
-      "13  14  0.084556  0.0840  0.082731  0.082359  0.081920  0.081816  0.081936   \n",
-      "14  15  0.042278  0.0420  0.041365  0.041180  0.040960  0.040908  0.040968   \n",
-      "15  16  0.042278  0.0420  0.041365  0.041180  0.040960  0.040908  0.040968   \n",
-      "16  17  0.042278  0.0420  0.041365  0.041180  0.040960  0.040908  0.040968   \n",
-      "17  18  0.063417  0.0630  0.062048  0.061769  0.061440  0.061362  0.061452   \n",
-      "18  19  0.063417  0.0630  0.062048  0.061769  0.061440  0.061362  0.061452   \n",
-      "19  20  0.063417  0.0630  0.062048  0.061769  0.061440  0.061362  0.061452   \n",
-      "20  21  0.063417  0.0630  0.062048  0.061769  0.061440  0.061362  0.061452   \n",
-      "21  22  0.063417  0.0630  0.062048  0.061769  0.061440  0.061362  0.061452   \n",
-      "22  23  0.063417  0.0630  0.062048  0.061769  0.061440  0.061362  0.061452   \n",
-      "23  24  0.295945  0.2940  0.289557  0.288257  0.286719  0.286357  0.286776   \n",
-      "24  25  0.295945  0.2940  0.289557  0.288257  0.286719  0.286357  0.286776   \n",
-      "25  26  0.042278  0.0420  0.041365  0.041180  0.040960  0.040908  0.040968   \n",
-      "26  27  0.042278  0.0420  0.041365  0.041180  0.040960  0.040908  0.040968   \n",
-      "27  28  0.042278  0.0420  0.041365  0.041180  0.040960  0.040908  0.040968   \n",
-      "28  29  0.084556  0.0840  0.082731  0.082359  0.081920  0.081816  0.081936   \n",
-      "29  30  0.140926  0.1400  0.137884  0.137265  0.136533  0.136361  0.136560   \n",
-      "30  31  0.105694  0.1050  0.103413  0.102949  0.102400  0.102271  0.102420   \n",
-      "31  32  0.147972  0.1470  0.144778  0.144128  0.143360  0.143179  0.143388   \n",
-      "32  33  0.042278  0.0420  0.041365  0.041180  0.040960  0.040908  0.040968   \n",
-      "\n",
-      "          t8        t9  ...       t87       t88       t89       t90       t91  \\\n",
-      "0   0.000000  0.000000  ...  0.000000  0.000000  0.000000  0.000000  0.000000   \n",
-      "1   0.068118  0.067690  ...  0.079814  0.078102  0.076665  0.075190  0.073766   \n",
-      "2   0.061307  0.060921  ...  0.071833  0.070292  0.068998  0.067671  0.066389   \n",
-      "3   0.081742  0.081229  ...  0.095777  0.093723  0.091998  0.090228  0.088519   \n",
-      "4   0.040871  0.040614  ...  0.047889  0.046861  0.045999  0.045114  0.044259   \n",
-      "5   0.040871  0.040614  ...  0.047889  0.046861  0.045999  0.045114  0.044259   \n",
-      "6   0.136237  0.135381  ...  0.159629  0.156205  0.153330  0.150380  0.147532   \n",
-      "7   0.136237  0.135381  ...  0.159629  0.156205  0.153330  0.150380  0.147532   \n",
-      "8   0.040871  0.040614  ...  0.047889  0.046861  0.045999  0.045114  0.044259   \n",
-      "9   0.040871  0.040614  ...  0.047889  0.046861  0.045999  0.045114  0.044259   \n",
-      "10  0.030653  0.030461  ...  0.035916  0.035146  0.034499  0.033835  0.033195   \n",
-      "11  0.040871  0.040614  ...  0.047889  0.046861  0.045999  0.045114  0.044259   \n",
-      "12  0.040871  0.040614  ...  0.047889  0.046861  0.045999  0.045114  0.044259   \n",
-      "13  0.081742  0.081229  ...  0.095777  0.093723  0.091998  0.090228  0.088519   \n",
-      "14  0.040871  0.040614  ...  0.047889  0.046861  0.045999  0.045114  0.044259   \n",
-      "15  0.040871  0.040614  ...  0.047889  0.046861  0.045999  0.045114  0.044259   \n",
-      "16  0.040871  0.040614  ...  0.047889  0.046861  0.045999  0.045114  0.044259   \n",
-      "17  0.061307  0.060921  ...  0.071833  0.070292  0.068998  0.067671  0.066389   \n",
-      "18  0.061307  0.060921  ...  0.071833  0.070292  0.068998  0.067671  0.066389   \n",
-      "19  0.061307  0.060921  ...  0.071833  0.070292  0.068998  0.067671  0.066389   \n",
-      "20  0.061307  0.060921  ...  0.071833  0.070292  0.068998  0.067671  0.066389   \n",
-      "21  0.061307  0.060921  ...  0.071833  0.070292  0.068998  0.067671  0.066389   \n",
-      "22  0.061307  0.060921  ...  0.071833  0.070292  0.068998  0.067671  0.066389   \n",
-      "23  0.286097  0.284300  ...  0.335220  0.328030  0.321992  0.315797  0.309816   \n",
-      "24  0.286097  0.284300  ...  0.335220  0.328030  0.321992  0.315797  0.309816   \n",
-      "25  0.040871  0.040614  ...  0.047889  0.046861  0.045999  0.045114  0.044259   \n",
-      "26  0.040871  0.040614  ...  0.047889  0.046861  0.045999  0.045114  0.044259   \n",
-      "27  0.040871  0.040614  ...  0.047889  0.046861  0.045999  0.045114  0.044259   \n",
-      "28  0.081742  0.081229  ...  0.095777  0.093723  0.091998  0.090228  0.088519   \n",
-      "29  0.136237  0.135381  ...  0.159629  0.156205  0.153330  0.150380  0.147532   \n",
-      "30  0.102178  0.101536  ...  0.119721  0.117153  0.114997  0.112785  0.110649   \n",
-      "31  0.143049  0.142150  ...  0.167610  0.164015  0.160996  0.157899  0.154908   \n",
-      "32  0.040871  0.040614  ...  0.047889  0.046861  0.045999  0.045114  0.044259   \n",
-      "\n",
-      "         t92       t93       t94       t95       t96  \n",
-      "0   0.000000  0.000000  0.000000  0.000000  0.000000  \n",
-      "1   0.072729  0.072075  0.071074  0.069782  0.068366  \n",
-      "2   0.065457  0.064868  0.063967  0.062804  0.061529  \n",
-      "3   0.087275  0.086490  0.085289  0.083738  0.082039  \n",
-      "4   0.043638  0.043245  0.042644  0.041869  0.041020  \n",
-      "5   0.043638  0.043245  0.042644  0.041869  0.041020  \n",
-      "6   0.145459  0.144151  0.142148  0.139564  0.136732  \n",
-      "7   0.145459  0.144151  0.142148  0.139564  0.136732  \n",
-      "8   0.043638  0.043245  0.042644  0.041869  0.041020  \n",
-      "9   0.043638  0.043245  0.042644  0.041869  0.041020  \n",
-      "10  0.032728  0.032434  0.031983  0.031402  0.030765  \n",
-      "11  0.043638  0.043245  0.042644  0.041869  0.041020  \n",
-      "12  0.043638  0.043245  0.042644  0.041869  0.041020  \n",
-      "13  0.087275  0.086490  0.085289  0.083738  0.082039  \n",
-      "14  0.043638  0.043245  0.042644  0.041869  0.041020  \n",
-      "15  0.043638  0.043245  0.042644  0.041869  0.041020  \n",
-      "16  0.043638  0.043245  0.042644  0.041869  0.041020  \n",
-      "17  0.065457  0.064868  0.063967  0.062804  0.061529  \n",
-      "18  0.065457  0.064868  0.063967  0.062804  0.061529  \n",
-      "19  0.065457  0.064868  0.063967  0.062804  0.061529  \n",
-      "20  0.065457  0.064868  0.063967  0.062804  0.061529  \n",
-      "21  0.065457  0.064868  0.063967  0.062804  0.061529  \n",
-      "22  0.065457  0.064868  0.063967  0.062804  0.061529  \n",
-      "23  0.305464  0.302717  0.298511  0.293084  0.287138  \n",
-      "24  0.305464  0.302717  0.298511  0.293084  0.287138  \n",
-      "25  0.043638  0.043245  0.042644  0.041869  0.041020  \n",
-      "26  0.043638  0.043245  0.042644  0.041869  0.041020  \n",
-      "27  0.043638  0.043245  0.042644  0.041869  0.041020  \n",
-      "28  0.087275  0.086490  0.085289  0.083738  0.082039  \n",
-      "29  0.145459  0.144151  0.142148  0.139564  0.136732  \n",
-      "30  0.109094  0.108113  0.106611  0.104673  0.102549  \n",
-      "31  0.152732  0.151358  0.149255  0.146542  0.143569  \n",
-      "32  0.043638  0.043245  0.042644  0.041869  0.041020  \n",
-      "\n",
-      "[33 rows x 97 columns]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
@@ -133,10 +20,10 @@
     "num_variables = 32\n",
     "\n",
     "# Anzahl der Szenarien\n",
-    "num_scenarios = 100\n",
+    "num_scenarios = 1000\n",
     "\n",
-    "# Standardabweichung der normalverteilten Zufallsvariablen\n",
-    "std_dev = 0.005\n",
+    "# Standardabweichung der normalverteilten Zufallsvariablen in MW\n",
+    "std_dev = 0.01\n",
     "\n",
     "# Erstelle ein leeres Pandas-DataFrame für die Ergebnisse\n",
     "results = pd.DataFrame()\n",
@@ -163,42 +50,33 @@
     "    \n",
     "    # Füge die Zufallsvariablen ein\n",
     "    df_varied = pd.DataFrame(random_variables_adjusted)\n",
+    "    \n",
+    "    # Füge eine Spalte für den Slack bus hinzu\n",
+    "    df_varied.insert(0, '1',  0)\n",
     "\n",
     "    # Füge eine Spalte für den Zeitpunkt hinzu\n",
     "    df_varied.insert(0, \"t\", range(1, len(df_profil)+1))\n",
-    "\n",
-    "    # Setze die Spaltenüberschriften auf \"S\" + Nummer des Szenarios\n",
-    "    #df_varied.columns = [\"S{}\".format(i+1) for i in range(num_variables)]\n",
-    "\n",
+    "    \n",
+    "    # Benenne die Spalten von 1 bis 33\n",
+    "    df_varied.columns = [\"t\", 1] + list(range(2, num_variables+2))\n",
+    "    \n",
     "    # Füge das DataFrame mit den angepassten Zufallsvariablen dem DataFrame der Ergebnisse hinzu\n",
     "    results = pd.concat([results, df_varied], ignore_index=True)\n",
     "\n",
     "# Füge eine Spalte für die Szenarien hinzu\n",
-    "results.insert(0, \"Scenario\", np.repeat(np.arange(1, num_scenarios+1), len(df_profil)))\n",
+    "results.insert(0, \"s\", np.repeat(np.arange(1, num_scenarios+1), len(df_profil)))\n",
     "\n",
     "# Sortiere die Ergebnisse nach Szenario und Zeitpunkt\n",
-    "results = results.sort_values(by=[\"Scenario\", \"t\"])\n",
+    "results = results.sort_values(by=[\"s\", \"t\"])\n",
     "\n",
     "# Speichere das DataFrame der Ergebnisse in einer CSV-Datei\n",
-    "results.to_excel(\"Ergebnisse.xlsx\", index=False)\n",
-    "\n",
-    "\n",
-    "\n",
-    "########################################part 2#####################################\n",
-    "load_bus = pd.read_excel('load_bus_winter.xlsx')\n",
-    "\n",
-    "load_profil = pd.DataFrame(columns=['b'] + ['t'+str(i) for i in range(1,97)])\n",
-    "load_profil['b'] = load_bus['b']\n",
-    "for i in range(1,97):\n",
-    "    load_profil['t'+str(i)] = df_profil['profil'][i-1] * load_bus['Active demand']\n",
-    "    \n",
-    "print(load_profil)"
+    "results.to_excel(\"Load_deviation_data.xlsx\", index=False)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1bfd9939",
+   "id": "98b870ca",
    "metadata": {},
    "outputs": [],
    "source": []
