--- a/Smart_meter_data_sort/Merge SM data to IEEE 33/merge_bus_load_v2.ipynb
+++ b/Smart_meter_data_sort/Merge SM data to IEEE 33/merge_bus_load_v2.ipynb
@@ -2,44 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "       2      4      8     11     13     14     17     18     20     22  ...   \n",
-      "0  0.335  0.078  0.220  1.468  0.560  0.706  0.658  0.400  0.306  0.534  ...  \\\n",
-      "1  0.334  0.080  0.229  1.223  0.523  0.592  1.062  0.260  0.306  0.867  ...   \n",
-      "2  0.331  0.078  0.402  1.347  0.309  0.205  0.623  0.135  0.307  0.085  ...   \n",
-      "3  0.336  0.078  0.174  1.186  0.312  0.150  0.910  0.119  0.302  0.081  ...   \n",
-      "4  0.337  0.074  0.166  1.016  0.252  0.165  1.155  0.150  0.305  0.044  ...   \n",
-      "\n",
-      "   52000427  52000455  52000482   37.2  528.1  382.1  217.2  254.1  349.1   \n",
-      "0     0.269     0.033     0.034  0.160  0.025  1.096  0.199  0.913  0.587  \\\n",
-      "1     0.209     0.035     0.033  0.176  0.024  1.111  0.179  1.067  0.119   \n",
-      "2     0.185     0.035     0.034  0.168  0.025  0.702  0.131  0.755  0.085   \n",
-      "3     0.183     0.036     0.034  0.156  0.015  0.566  0.115  0.717  0.099   \n",
-      "4     0.173     0.036     0.034  0.145  0.014  0.654  0.095  0.757  0.087   \n",
-      "\n",
-      "   1099.1  \n",
-      "0   0.278  \n",
-      "1   0.307  \n",
-      "2   0.441  \n",
-      "3   0.357  \n",
-      "4   0.371  \n",
-      "\n",
-      "[5 rows x 5697 columns]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
     "\n",
     "# Datei lesen\n",
-    "df = pd.read_excel('combined_df_2021.xlsx')\n",
+    "df = pd.read_excel('Combined_2021.xlsx')\n",
+    "#df = pd.read_excel('combined_df_2021.xlsx')\n",
     "print(df.head())"
    ]
   },
@@ -35913,7 +35885,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "smart-meter",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -35927,9 +35899,8 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
-  },
-  "orig_nbformat": 4
+   "version": "3.9.5"
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
