--- a/2. Data_Preparation_IEEE33/Calculate_Deviation_Error.ipynb
+++ b/2. Data_Preparation_IEEE33/Calculate_Deviation_Error.ipynb
@@ -71,7 +71,7 @@
     "results = results.sort_values(by=[\"s\", \"t\"])\n",
     "\n",
     "# Speichere das DataFrame der Ergebnisse in einer CSV-Datei\n",
-    "results.to_excel(\"load_deviation_SLP.xlsx\", index=False)"
+    "results.to_excel(\"load_deviation_ARIMA.xlsx\", index=False)"
    ]
   },
   {
@@ -99,7 +99,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.9.15"
   }
  },
  "nbformat": 4,
