--- a/2. Data_Preparation_IEEE33/Calculate_Deviation_Error.ipynb
+++ b/2. Data_Preparation_IEEE33/Calculate_Deviation_Error.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "940004ea",
    "metadata": {},
    "outputs": [],
@@ -17,14 +17,16 @@
     "df_profil = pd.read_excel(\"profil_case_study.xlsx\")\n",
     "\n",
     "# Anzahl der Zufallsvariablen pro Zeitpunkt\n",
-    "num_variables = 32\n",
+    "# 32\n",
+    "num_variables = 22\n",
     "\n",
     "# Anzahl der Szenarien\n",
     "num_scenarios = 100\n",
     "\n",
     "# Standardabweichung der normalverteilten Zufallsvariablen in MW\n",
     "# standarddeviation SLP from real\n",
-    "std_dev = 0.1196\n",
+    "#0.0466\n",
+    "std_dev = 0.1\n",
     "\n",
     "# Erstelle ein leeres Pandas-DataFrame für die Ergebnisse\n",
     "results = pd.DataFrame()\n",
@@ -71,7 +73,7 @@
     "results = results.sort_values(by=[\"s\", \"t\"])\n",
     "\n",
     "# Speichere das DataFrame der Ergebnisse in einer CSV-Datei\n",
-    "results.to_excel(\"load_deviation_ARIMA.xlsx\", index=False)"
+    "results.to_excel(\"ABC.xlsx\", index=False)"
    ]
   },
   {
@@ -99,7 +101,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.15"
+   "version": "3.10.9"
   }
  },
  "nbformat": 4,
